--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://vimeo.com/705157083",s.async=!0,document.head.appendChild(s);</script>
-
+            <iframe src="https://player.vimeo.com/video/705157083?h=db9b81c956" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/8yj82EU" class="a-btn" style="text-decoration: none;">
