--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
 
             <!-- VSL -->
-            <iframe src="https://player.vimeo.com/video/705157083?h=db9b81c956" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/705157083?h=db9b81c956" width="60%" height="40%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
