--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
+            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 14Kg Em 30 Dias
+</b></h3>
 
             <!-- VSL -->
-            <iframe src="https://player.vimeo.com/video/705157083?h=db9b81c956" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/705157083?h=db9b81c956" width="100%" height="120%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
